--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -45,16 +45,14 @@ jobs:
       - name: Load cached Docker images if any
         if: steps.cache.outputs.cache-hit == 'true'
         run: |
-          docker load --input ${{ env.PATH_CACHE }}/${{ steps.imagetag.outputs.hash }}/go-hostpital_v1_18_1.tar
-          docker load --input ${{ env.PATH_CACHE }}/${{ steps.imagetag.outputs.hash }}/go-hostpital_v1_19_1.tar
+          docker load --input ${{ env.PATH_CACHE }}/${{ steps.imagetag.outputs.hash }}/go-hostpital_min.tar
           docker load --input ${{ env.PATH_CACHE }}/${{ steps.imagetag.outputs.hash }}/go-hostpital_latest_1.tar
 
       - name: Pull base images if no-cache
         if: steps.cache.outputs.cache-hit != 'true'
         run: |
           : # Pull images one-by-one for stability
-          docker pull golang:1.18-alpine
-          docker pull golang:1.19-alpine
+          docker pull golang:1.22-alpine
           docker pull golang:alpine
 
       - name: Build Docker images if no-cache
@@ -66,13 +64,11 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: |
           mkdir -p ${{ env.PATH_CACHE }}/${{ steps.imagetag.outputs.hash }}
-          docker save --output ${{ env.PATH_CACHE }}/${{ steps.imagetag.outputs.hash }}/go-hostpital_v1_18_1.tar go-hostpital_v1_18:latest
-          docker save --output ${{ env.PATH_CACHE }}/${{ steps.imagetag.outputs.hash }}/go-hostpital_v1_19_1.tar go-hostpital_v1_19:latest
+          docker save --output ${{ env.PATH_CACHE }}/${{ steps.imagetag.outputs.hash }}/go-hostpital_min.tar go-hostpital_min:latest
           docker save --output ${{ env.PATH_CACHE }}/${{ steps.imagetag.outputs.hash }}/go-hostpital_latest_1.tar go-hostpital_latest:latest
 
-      - name: Run tests on Go 1.18
-        run: docker-compose run v1_18
-      - name: Run tests on Go 1.19
-        run: docker-compose run v1_19
+      - name: Run tests on minimum supported Go version
+        run: docker-compose run min
+
       - name: Run tests on latest Go
         run: docker-compose run latest
