--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,15 +1,15 @@
 run:
   tests: true
-  fast: true
   build-tags:
     - golangci
-  skip-dirs:
-    - .github
-    - .vscode
   allow-parallel-runners: true
 
+issues:
+  exclude-dirs:
+    - .github
+    - .vscode
+
 output:
-  format: colored-line-number
   sort-results: true
 
 linters:
@@ -25,6 +25,8 @@ linters:
   - ifshort
   - interfacer
   - maligned
+  - execinquery
+  - gomnd
   # Disabled because of generics
   - rowserrcheck
   - sqlclosecheck
