--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       context: .
       dockerfile: ./.github/Dockerfile
       args:
-        VARIANT: 1.18-alpine
+        VARIANT: 1.22-alpine
     volumes:
       - .:/workspaces
     entrypoint: [ "./.github/run_go_mod_tidy.sh" ]
@@ -52,23 +52,13 @@ services:
       - .:/workspaces
       - GO_PKG_MOD:/go/pkg/mod
     entrypoint: [ "./.github/run_go_test_cover.sh" ]
-  # Service v1_18 runs the tests on Go v1.18
-  v1_18:
+  # Service min runs the tests on minimum supported Go version
+  min:
     build:
       context: .
       dockerfile: ./.github/Dockerfile
       args:
-        VARIANT: 1.18-alpine
-    volumes:
-      - .:/workspaces
-      - GO_PKG_MOD:/go/pkg/mod
-  # Service v1_19 runs the tests on Go v1.19
-  v1_19:
-    build:
-      context: .
-      dockerfile: ./.github/Dockerfile
-      args:
-        VARIANT: 1.19-alpine
+        VARIANT: 1.22-alpine
     volumes:
       - .:/workspaces
       - GO_PKG_MOD:/go/pkg/mod
