--- a/.github/workflows/weekly-update.yml
+++ b/.github/workflows/weekly-update.yml
@@ -31,21 +31,21 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Update go.mod and go.sum
         run: |
           set -eu
-          docker-compose run tidy
+          docker compose run tidy
 
       - name: Run tests
         # Test only with the latest version of Go. Since on PR, the CIs will
         # run on all Go versions.
         run: |
           set -eu
-          docker-compose run latest
+          docker compose run latest
 
       - name: Create Pull Request on Change
-        uses: peter-evans/create-pull-request@v4
+        uses: peter-evans/create-pull-request@v6
         with:
             token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
